Parameter for topic

--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -11,5 +11,6 @@ spec:
             image: gcr.io/s9-demo/tevents:latest
             env:
             - name: RELEASE
-              value: "v0.0.9"
-
+              value: "v0.0.10"
+            - name: SEARCH
+              value: "KnativeDemo"
